# LRT_meldog_application

./: .gitignore  CMakeLists.txt  README.md  package.xml
app/: main.cpp
backend/: app_controller.cpp
include/backend/: app_controller.hpp
qml/: AssistantPopup.qml  MainToolBar.qml  main.qml  resources.qrc
qml/Components/: BackgroundRoot.qml  Card.qml  ControlColumn.qml  KeyBadge.qml  ModeTabs.qml  TabBarItem.qml
qml/Home/: DocsAndCommPanel.qml  GamepadControlsPanel.qml  HomeHeader.qml  HomeView.qml
qml/Joints/: JointsView.qml  MeldogJointsView.qml  MeldogView.qml
qml/MeldogModel/: MeldogModel.qml
qml/MeldogModel/Imported/LL_vis_v2/meshes/: node.mesh
qml/MeldogModel/Imported/foot_vis/meshes/: node.mesh
qml/MeldogModel/Imported/lower_limb_test/: Lower_limb_test.qml
qml/MeldogModel/Imported/lower_limb_test/meshes/: node.mesh
qml/Rviz/: RvizView.qml
